# new_vk_engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
shader/: CMakeLists.txt
shader/include/shader/: .frag.u32  .vert.u32  cloud.comp.u32  cloudtex.comp.u32  perlin.comp.u32  perlinworley.comp.u32  skybox.comp.u32  sphere.comp.u32  testfrag.frag.u32  testvert.vert.u32  vol.comp.u32  weather.comp.u32  worley.comp.u32
shader/src/: skybox.comp  sphere.comp
shaders/: .comp  .comp.spv  .frag  .frag.spv  .vert  .vert.spv  cloud.comp  cloud.comp.spv  cloudtex.comp  cloudtex.comp.spv  marcher.comp.spv  marching.comp  marching.comp.spv  pcomp.comp  pcomp.comp.spv  perlin+worley.comp  perlin+worley.comp.spv  perlin.comp  perlin.comp.spv  perlinworley.comp.spv  skybox.comp  skybox.comp.spv  sphere.comp  sphere.comp.spv  vol.comp.spv  weather.comp  weather.comp.spv  worley.comp  worley.comp.spv
src/: CMakeLists.txt  main.cpp  vk_boiler.cpp  vk_boiler.h  vk_camera.cpp  vk_camera.h  vk_cmd.cpp  vk_cmd.h  vk_comp.cpp  vk_comp.h  vk_engine.cpp  vk_engine.h  vk_gltf.cpp  vk_init.cpp  vk_init.h  vk_mesh.cpp  vk_mesh.h  vk_pipeline.cpp  vk_pipeline.h  vk_pipeline_builder.cpp  vk_pipeline_builder.h  vk_type.h  vk_util.cpp  vk_util.h
